feat: implement rate limiting, health checks, and frontend error handling refactor
Core Infrastructure & DevOps:
- Implemented Redis-backed rate limiting in API Gateway with custom KeyResolver strategies.
- Added Docker health checks for backend services and integrated them into docker-compose.yml.
- Updated project context with latest implementation details.

Backend Improvements:
- Added comprehensive unit tests for Funds Service (WalletController, FundsLockService, TransactionService).
- Implemented consistency improvements in transaction handling logic.

Frontend Refactoring & Quality:
- Refactored API client to use Axios with centralized auth interceptors and global error handling.
- Introduced ErrorBoundary and ErrorState components for graceful UI error recovery.
- Established Vitest/JSDOM testing suite and added core component tests.

--- a/backend/api-gateway/src/main/resources/application-staging.yml
+++ b/backend/api-gateway/src/main/resources/application-staging.yml
@@ -4,6 +4,12 @@ spring:
     activate:
       on-profile: staging
 
+  # Redis Configuration
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT:6379}
+
   security:
     oauth2:
       client:
