--- a/backend/order-service/Dockerfile
+++ b/backend/order-service/Dockerfile
@@ -1,22 +1,62 @@
-FROM maven:3.9-eclipse-temurin-21 AS build
+# =============================================================================
+# WINVESTCO Trading Platform - Order Service
+# Optimized Multi-Stage Docker Build
+# =============================================================================
+
+# Stage 1: Build
+FROM maven:3.9-eclipse-temurin-21-alpine AS build
 WORKDIR /app
-COPY pom.xml .
-COPY common/pom.xml common/pom.xml
-COPY eureka-server/pom.xml eureka-server/pom.xml
-COPY api-gateway/pom.xml api-gateway/pom.xml
-COPY user-service/pom.xml user-service/pom.xml
-COPY market-service/pom.xml market-service/pom.xml
-COPY portfolio-service/pom.xml portfolio-service/pom.xml
-COPY funds-service/pom.xml funds-service/pom.xml
-COPY ledger-service/pom.xml ledger-service/pom.xml
-COPY order-service/pom.xml order-service/pom.xml
-RUN mvn dependency:go-offline -pl order-service -am
+
+# Copy pom files first for dependency caching
+COPY pom.xml ./
+COPY common/pom.xml common/
+COPY order-service/pom.xml order-service/
+
+# Download dependencies (cached layer)
+RUN mvn dependency:go-offline -pl order-service -am -B
+
+# Copy source code
 COPY common/src common/src
 COPY order-service/src order-service/src
-RUN mvn -pl order-service -am clean package -DskipTests
 
+# Build the application
+RUN mvn clean package -pl order-service -am -DskipTests -B
+
+# Stage 2: Runtime (minimal JRE image)
 FROM eclipse-temurin:21-jre-alpine
+
+# OCI Labels
+LABEL org.opencontainers.image.title="WINVESTCO Order Service" \
+    org.opencontainers.image.description="Order Lifecycle Management" \
+    org.opencontainers.image.vendor="WINVESTCO" \
+    org.opencontainers.image.source="https://github.com/axshowk/winvestco-trading-platform"
+
 WORKDIR /app
+
+# Create non-root user for security
+RUN addgroup -S winvestco && adduser -S appuser -G winvestco
+
+# Install curl for healthcheck
+RUN apk add --no-cache curl
+
+# Copy the JAR from build stage
 COPY --from=build /app/order-service/target/*.jar app.jar
+
+# Set ownership
+RUN chown -R appuser:winvestco /app
+
+# Switch to non-root user
+USER appuser
+
+# Expose service port
 EXPOSE 8089
-ENTRYPOINT ["java", "-jar", "app.jar"]
+
+# Health check using Spring Actuator
+HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
+    CMD curl -f http://localhost:8089/actuator/health || exit 1
+
+# JVM tuning for containers
+ENV JAVA_OPTS="-XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0 -XX:+UseG1GC -XX:+UseStringDeduplication"
+
+# Run the application with optimized JVM settings
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
