--- a/backend/payment-service/src/main/resources/application.yml
+++ b/backend/payment-service/src/main/resources/application.yml
@@ -63,8 +63,24 @@ management:
   endpoint:
     health:
       show-details: always
+      probes:
+        enabled: true  # Enables /actuator/health/liveness and /actuator/health/readiness
     prometheus:
       enabled: true
+  health:
+    # Kubernetes probes
+    livenessState:
+      enabled: true
+    readinessState:
+      enabled: true
+    # Dependency health indicators
+    db:
+      enabled: true
+    rabbit:
+      enabled: true
+    diskSpace:
+      enabled: true
+      threshold: 10MB
   metrics:
     export:
       prometheus:
