--- a/backend/report-service/Dockerfile
+++ b/backend/report-service/Dockerfile
@@ -1,40 +1,62 @@
-# Build stage
-FROM eclipse-temurin:21-jdk-alpine AS builder
+# =============================================================================
+# WINVESTCO Trading Platform - Report Service
+# Optimized Multi-Stage Docker Build
+# =============================================================================
+
+# Stage 1: Build
+FROM maven:3.9-eclipse-temurin-21-alpine AS build
 WORKDIR /app
 
-# Copy maven wrapper and pom files
-COPY mvnw ./
-COPY .mvn .mvn
+# Copy pom files first for dependency caching
 COPY pom.xml ./
 COPY common/pom.xml common/
 COPY report-service/pom.xml report-service/
 
-# Download dependencies
-RUN chmod +x mvnw && ./mvnw dependency:go-offline -pl report-service -am -B
+# Download dependencies (cached layer)
+RUN mvn dependency:go-offline -pl report-service -am -B
 
 # Copy source code
 COPY common/src common/src
 COPY report-service/src report-service/src
 
 # Build the application
-RUN ./mvnw package -pl report-service -am -DskipTests -B
+RUN mvn clean package -pl report-service -am -DskipTests -B
 
-# Runtime stage
+# Stage 2: Runtime (minimal JRE image)
 FROM eclipse-temurin:21-jre-alpine
+
+# OCI Labels
+LABEL org.opencontainers.image.title="WINVESTCO Report Service" \
+    org.opencontainers.image.description="Async Report Generation" \
+    org.opencontainers.image.vendor="WINVESTCO" \
+    org.opencontainers.image.source="https://github.com/axshowk/winvestco-trading-platform"
+
 WORKDIR /app
 
-# Create reports directory
-RUN mkdir -p /app/reports
+# Create non-root user for security
+RUN addgroup -S winvestco && adduser -S appuser -G winvestco
 
-# Copy jar from builder
-COPY --from=builder /app/report-service/target/*.jar app.jar
+# Install curl for healthcheck
+RUN apk add --no-cache curl
 
-# Expose port
+# Copy the JAR from build stage
+COPY --from=build /app/report-service/target/*.jar app.jar
+
+# Set ownership
+RUN chown -R appuser:winvestco /app
+
+# Switch to non-root user
+USER appuser
+
+# Expose service port
 EXPOSE 8094
 
-# Health check
+# Health check using Spring Actuator
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-    CMD wget -q --spider http://localhost:8094/actuator/health || exit 1
+    CMD curl -f http://localhost:8094/actuator/health || exit 1
 
-# Run the application with virtual threads
-ENTRYPOINT ["java", "-XX:+UseZGC", "-XX:+ZGenerational", "--enable-preview", "-jar", "app.jar"]
+# JVM tuning for containers
+ENV JAVA_OPTS="-XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0 -XX:+UseG1GC -XX:+UseStringDeduplication"
+
+# Run the application with optimized JVM settings
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
