--- a/backend/api-gateway/pom.xml
+++ b/backend/api-gateway/pom.xml
@@ -58,6 +58,12 @@
             <scope>test</scope>
         </dependency>
         
+        <!-- Redis Reactive for Rate Limiting -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
+        </dependency>
+        
         <!-- Reactor Test for WebFlux Testing -->
         <dependency>
             <groupId>io.projectreactor</groupId>
