--- a/backend/api-gateway/src/main/resources/application-docker.yml
+++ b/backend/api-gateway/src/main/resources/application-docker.yml
@@ -4,6 +4,12 @@ spring:
     activate:
       on-profile: docker
 
+  # Redis Configuration (Docker network)
+  data:
+    redis:
+      host: redis
+      port: 6379
+
   security:
     oauth2:
       client:
