--- a/backend/market-service/src/main/resources/application.yml
+++ b/backend/market-service/src/main/resources/application.yml
@@ -78,7 +78,27 @@ management:
   endpoint:
     health:
       show-details: always
+      probes:
+        enabled: true  # Enables /actuator/health/liveness and /actuator/health/readiness
     prometheus:
+      enabled: true
+  health:
+    # Kubernetes probes
+    livenessState:
+      enabled: true
+    readinessState:
+      enabled: true
+    # Dependency health indicators
+    db:
+      enabled: true
+    redis:
+      enabled: true
+    kafka:
+      enabled: true
+    diskSpace:
+      enabled: true
+      threshold: 10MB
+    circuitbreakers:
       enabled: true
   metrics:
     export:
@@ -95,9 +115,6 @@ management:
     tracing:
       endpoint: ${OTEL_EXPORTER_OTLP_ENDPOINT:http://localhost:4318/v1/traces}
       transport: http
-  health:
-    circuitbreakers:
-      enabled: true
 
 # Logging
 logging:
