--- a/backend/report-service/src/main/resources/application.yml
+++ b/backend/report-service/src/main/resources/application.yml
@@ -79,14 +79,39 @@ management:
   endpoint:
     health:
       show-details: always
+      probes:
+        enabled: true  # Enables /actuator/health/liveness and /actuator/health/readiness
     prometheus:
       enabled: true
+  health:
+    # Kubernetes probes
+    livenessState:
+      enabled: true
+    readinessState:
+      enabled: true
+    # Dependency health indicators
+    db:
+      enabled: true
+    rabbit:
+      enabled: true
+    diskSpace:
+      enabled: true
+      threshold: 10MB
   metrics:
     export:
       prometheus:
         enabled: true
     tags:
       application: ${spring.application.name}
+  # OpenTelemetry Tracing Configuration
+  tracing:
+    enabled: true
+    sampling:
+      probability: ${OTEL_TRACES_SAMPLER_ARG:1.0}
+  otlp:
+    tracing:
+      endpoint: ${OTEL_EXPORTER_OTLP_ENDPOINT:http://localhost:4318/v1/traces}
+      transport: http
 
 # Logging Configuration
 logging:
