--- a/backend/trade-service/Dockerfile
+++ b/backend/trade-service/Dockerfile
@@ -1,45 +1,62 @@
+# =============================================================================
+# WINVESTCO Trading Platform - Trade Service
+# Optimized Multi-Stage Docker Build
+# =============================================================================
+
 # Stage 1: Build
 FROM maven:3.9-eclipse-temurin-21-alpine AS build
-
 WORKDIR /app
 
-# Copy parent pom
+# Copy pom files first for dependency caching
 COPY pom.xml ./
-
-# Copy common module
 COPY common/pom.xml common/
-COPY common/src common/src
-
-# Copy trade-service module
 COPY trade-service/pom.xml trade-service/
+
+# Download dependencies (cached layer)
+RUN mvn dependency:go-offline -pl trade-service -am -B
+
+# Copy source code
+COPY common/src common/src
 COPY trade-service/src trade-service/src
 
-# Build common first, then trade-service
-RUN mvn clean package -pl common -am -DskipTests
-RUN mvn clean package -pl trade-service -am -DskipTests
+# Build the application
+RUN mvn clean package -pl trade-service -am -DskipTests -B
 
-# Stage 2: Run
+# Stage 2: Runtime (minimal JRE image)
 FROM eclipse-temurin:21-jre-alpine
+
+# OCI Labels
+LABEL org.opencontainers.image.title="WINVESTCO Trade Service" \
+    org.opencontainers.image.description="Trade Execution State Machine" \
+    org.opencontainers.image.vendor="WINVESTCO" \
+    org.opencontainers.image.source="https://github.com/axshowk/winvestco-trading-platform"
 
 WORKDIR /app
 
-# Create non-root user
-RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+# Create non-root user for security
+RUN addgroup -S winvestco && adduser -S appuser -G winvestco
+
+# Install curl for healthcheck
+RUN apk add --no-cache curl
 
 # Copy the JAR from build stage
 COPY --from=build /app/trade-service/target/*.jar app.jar
 
 # Set ownership
-RUN chown -R appuser:appgroup /app
+RUN chown -R appuser:winvestco /app
 
+# Switch to non-root user
 USER appuser
 
-# Expose port
+# Expose service port
 EXPOSE 8092
 
-# Health check
+# Health check using Spring Actuator
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-    CMD wget -q -O - http://localhost:8092/actuator/health || exit 1
+    CMD curl -f http://localhost:8092/actuator/health || exit 1
 
-# Run the application
-ENTRYPOINT ["java", "-jar", "app.jar"]
+# JVM tuning for containers
+ENV JAVA_OPTS="-XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0 -XX:+UseG1GC -XX:+UseStringDeduplication"
+
+# Run the application with optimized JVM settings
+ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
