--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -57,6 +57,7 @@
         <module>payment-service</module>
         <module>report-service</module>
         <module>schedule-service</module>
+        <module>news-sentiment-service</module>
     </modules>
 
     <dependencyManagement>
@@ -159,6 +160,16 @@
                                 <groupId>org.projectlombok</groupId>
                                 <artifactId>lombok</artifactId>
                                 <version>${lombok.version}</version>
+                            </path>
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok-mapstruct-binding</artifactId>
+                                <version>${lombok.mapstruct-binding.version}</version>
+                            </path>
+                            <path>
+                                <groupId>org.mapstruct</groupId>
+                                <artifactId>mapstruct-processor</artifactId>
+                                <version>${mapstruct.version}</version>
                             </path>
                         </annotationProcessorPaths>
                     </configuration>
