feat: added new sentiment predictor service for sentiment prediction based on the news articles scrapped via news service

--- a/backend/news-sentiment-service/src/main/resources/application.yml
+++ b/backend/news-sentiment-service/src/main/resources/application.yml
@@ -35,3 +35,10 @@ management:
   endpoint:
     health:
       show-details: always
+
+# Sentiment Analysis Service Configuration
+sentiment:
+  service:
+    url: ${SENTIMENT_SERVICE_URL:http://localhost:8096}
+    timeout: 30000
+    batch-size: 50
