--- a/backend/order-service/pom.xml
+++ b/backend/order-service/pom.xml
@@ -239,6 +239,12 @@
                     </excludes>
                 </configuration>
             </plugin>
+            
+            <!-- JaCoCo Code Coverage -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+            </plugin>
         </plugins>
         
         <resources>
