feat: add gRPC market data streaming infrastructure
- Add protobuf/gRPC dependencies to parent pom.xml and common module
- Create market_data.proto with GetQuote (unary) and SubscribeMarketData (server-streaming) RPCs
- Add protobuf-maven-plugin for code generation in common module
- Implement MarketDataGrpcService server in market-service with subscriber management
- Integrate gRPC push into MarketDataScheduler for real-time updates
- Add MarketDataGrpcClient in trade-service with @GrpcClient annotation
- Refactor MockExecutionEngine to use gRPC instead of Feign REST for market prices
- Add gRPC server/client YAML configs (port 9084 for server, plaintext for client)
- Add unit tests for MarketDataGrpcService and MarketDataGrpcClient

--- a/backend/market-service/pom.xml
+++ b/backend/market-service/pom.xml
@@ -94,6 +94,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- gRPC Server Spring Boot Starter -->
+        <dependency>
+            <groupId>net.devh</groupId>
+            <artifactId>grpc-server-spring-boot-starter</artifactId>
+            <version>${grpc-spring-boot-starter.version}</version>
+        </dependency>
+
         <!-- Caffeine cache for session management -->
         <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
