--- a/backend/trade-service/pom.xml
+++ b/backend/trade-service/pom.xml
@@ -136,6 +136,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- gRPC Client Spring Boot Starter -->
+        <dependency>
+            <groupId>net.devh</groupId>
+            <artifactId>grpc-client-spring-boot-starter</artifactId>
+            <version>${grpc-spring-boot-starter.version}</version>
+        </dependency>
+
         <!-- MapStruct -->
         <dependency>
             <groupId>org.mapstruct</groupId>
